Fix some references

--- a/src/Designer/backend/src/Designer/Views/Home/StartPage.cshtml
+++ b/src/Designer/backend/src/Designer/Views/Home/StartPage.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:title" content="Altinn Studio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/designer/img/altinn-studio-social-preview.png" />
+    <meta property="og:image" content="/img/altinn-studio-social-preview.png" />
     <meta property="og:site_name" content="Altinn Studio" />
 
     <title>Altinn Studio</title>
@@ -15,10 +15,10 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" href="/favicon.ico" />
 
-    <link rel="apple-touch-icon" href="/designer/img/icon64x64.png" />
-    <link rel="apple-touch-icon" sizes="96x96" href="/designer/img/icon96x96.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/designer/img/icon144x144.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/designer/img/icon192x192.png" />
+    <link rel="apple-touch-icon" href="/img/icon64x64.png" />
+    <link rel="apple-touch-icon" sizes="96x96" href="/img/icon96x96.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/icon144x144.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/img/icon192x192.png" />
 
     <!-- CSS -->
     <link href="https://altinncdn.no/fonts/roboto/latin/roboto.css" rel="stylesheet" />
@@ -47,7 +47,7 @@
                 <div class="col-12">
                     <nav id="primary-nav" class="a-globalNav">
                         <a href="/" class="a-globalNav-logo">
-                            <img src="/designer/img/AltinnD-logo.svg" alt="Altinn logo" />
+                            <img src="/img/AltinnD-logo.svg" alt="Altinn logo" />
                             <span class="sr-only">Til forsiden</span>
                         </a>
                     </nav>
@@ -58,7 +58,7 @@
     <div class="pt-3"></div>
     <h1 class="sr-only">Altinn Studio</h1>
     <div class="jumbotron jumbotron-fluid a-jumbotron a-jumbotron-header a-jumbotron-header--left a-blueDarkerText"
-        style="background-image: url('/designer/img/Altinn-studio-stor.svg')">
+        style="background-image: url('/img/Altinn-studio-stor.svg')">
         <div class="container">
             <div class="row">
                 <div class=" col-md-12 offset-md-0 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2 text-center">
@@ -85,7 +85,7 @@
             <div>
                 <div class="row mb-6 mt-2 align-items-center">
                     <div class="col-12 col-md-6 col-lg-5 mb-2 mb-md-0 order-md-1">
-                        <img class="d-block mx-auto" src="/designer/img/Altinn-studio-2.svg"
+                        <img class="d-block mx-auto" src="/img/Altinn-studio-2.svg"
                             alt="Kvinne som sitter med en laptop og en kaffekopp. Illustrasjon." />
                     </div>
                     <div class="col-12 col-md-6 col-lg-5 offset-lg-1">
@@ -103,7 +103,7 @@
             <div>
                 <div class="row mb-6 mt-2 align-items-center">
                     <div class="col-12 col-md-6 col-lg-5 mb-2 mb-md-0 offset-lg-1">
-                        <img class="d-block mx-auto" src="/designer/img/Altinn-studio-3.svg"
+                        <img class="d-block mx-auto" src="/img/Altinn-studio-3.svg"
                             alt="Mann som leser dokumenter. Illustrasjon." />
                     </div>
                     <div class="col-12 col-md-6 col-lg-5">
@@ -123,7 +123,7 @@
             <div>
                 <div class="row mb-6 mt-2 align-items-center">
                     <div class="col-12 col-md-6 col-lg-5 mb-2 mb-md-0 order-md-1">
-                        <img class="d-block mx-auto" src="/designer/img/Altinn-studio-1.svg"
+                        <img class="d-block mx-auto" src="/img/Altinn-studio-1.svg"
                             alt="To personer som håndhilser i en trapp. Illustrasjon." />
                     </div>
                     <div class="col-12 col-md-6 col-lg-5 offset-lg-1">
