Fix some references

--- a/src/Designer/backend/src/Designer/Views/Home/StartPage.cshtml
+++ b/src/Designer/backend/src/Designer/Views/Home/StartPage.cshtml
@@ -25,7 +25,7 @@
     <link href="https://altinncdn.no/fonts/inter/inter.css" rel="stylesheet" />
 
     <script type="module" src="index.tsx"></script>
-    <link rel="stylesheet" type="text/css" href="/designer/css/startpage.css">
+    <link rel="stylesheet" type="text/css" href="/css/startpage.css">
 
 
     <!-- Javascript -->
