--- a/src/Designer/frontend/admin/features/instances/components/InstancesTable.module.css
+++ b/src/Designer/frontend/admin/features/instances/components/InstancesTable.module.css
@@ -1,3 +1,22 @@
+.skeletonWrapper {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.rowSkeleton {
+  height: 40px;
+  margin-bottom: 3px;
+}
+
+.buttonSkeleton {
+  width: 186px;
+  height: 42px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
 .footerCell {
   padding: 1rem;
   text-align: center;
