--- a/src/Designer/frontend/admin/features/instances/Instances.module.css
+++ b/src/Designer/frontend/admin/features/instances/Instances.module.css
@@ -1,9 +1,10 @@
 .heading {
-  margin-bottom: var(--ds-size-8);
+  margin-bottom: var(--ds-size-4);
 }
 
 .filterWrapper {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   margin-bottom: 1rem;
 }
