--- a/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicyAccessPackages/PolicyAccessPackageAccordion/PolicyAccessPackageAccordion.module.css
+++ b/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicyAccessPackages/PolicyAccessPackageAccordion/PolicyAccessPackageAccordion.module.css
@@ -1,3 +1,7 @@
-.accessPackageAccordion {
+.accessPackagePersonAccordion {
+  background-color: var(--ds-color-success-surface-tinted);
+}
+
+.accessPackageOrgAccordion {
   background-color: var(--fds-colors-blue-100);
 }
