--- a/src/Designer/frontend/packages/shared/src/components/GiteaHeader/VersionControlButtons/components/ShareChangesPopover/ShareChangesPopover.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/GiteaHeader/VersionControlButtons/components/ShareChangesPopover/ShareChangesPopover.module.css
@@ -1,14 +1,12 @@
 .popoverContent {
-  width: 445px;
-  max-width: 100%;
+  z-index: 9999;
+  width: max-content;
+  max-width: 445px;
 }
 
-.popoverContentCenter {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: var(--fds-spacing-5);
-  width: 445px;
-  max-width: 100%;
+/* Styles for .pushchButton maybe will be temporary until we migrate StudioPageHeader */
+.pushButton {
+  color: var(--ds-base-contrast-default);
+  font-family: var(--studio-font-family);
+  font-size: var(--ds--body-xs-font-size);
 }
