--- a/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicyAccessPackages/PolicyAccessPackageAccordion/PolicyAccessPackageAccordion.module.css
+++ b/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicyAccessPackages/PolicyAccessPackageAccordion/PolicyAccessPackageAccordion.module.css
@@ -3,5 +3,5 @@
 }
 
 .accessPackageOrgAccordion {
-  background-color: var(--fds-colors-blue-100);
+  background-color: var(--ds-color-accent-surface-tinted);
 }
