--- a/src/Designer/frontend/packages/process-editor/src/components/ConfigPanel/ConfigServiceTask/ConfigPdfServiceTask/ConfigPdfServiceTask.module.css
+++ b/src/Designer/frontend/packages/process-editor/src/components/ConfigPanel/ConfigServiceTask/ConfigPdfServiceTask/ConfigPdfServiceTask.module.css
@@ -51,3 +51,7 @@ ol > li::marker {
 .description {
   margin-top: calc(var(--fds-spacing-2) * -1);
 }
+
+.filenameContent {
+  margin-top: var(--fds-spacing-3);
+}
