feat(policy-editor): show access packages for persons in policy editor (#17593)

--- a/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicyAccessPackages/PolicyAccessPackageAccordion/PolicyAccessPackageAccordion.module.css
+++ b/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicyAccessPackages/PolicyAccessPackageAccordion/PolicyAccessPackageAccordion.module.css
@@ -1,3 +1,7 @@
-.accessPackageAccordion {
-  background-color: var(--fds-colors-blue-100);
+.accessPackagePersonAccordion {
+  background-color: var(--ds-color-success-surface-tinted);
+}
+
+.accessPackageOrgAccordion {
+  background-color: var(--ds-color-accent-surface-tinted);
 }
