--- a/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicySubjects/PolicySubjects.module.css
+++ b/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicySubjects/PolicySubjects.module.css
@@ -7,14 +7,14 @@
   color: var(--ds-color-text-subtle);
 }
 
-.selectedSubjectList {
-  display: flex;
-  flex-direction: column;
-  gap: var(--ds-size-2);
-  margin-top: var(--ds-size-4);
-  margin-bottom: var(--ds-size-8);
+.personAccordion {
+  background-color: var(--ds-color-success-surface-tinted);
+  font-weight: var(--ds-font-weight-medium);
+  font-size: var(--ds-font-size-4);
 }
 
-.selectedListTitle {
+.orgAccordion {
+  background-color: var(--ds-color-accent-surface-tinted);
   font-weight: var(--ds-font-weight-medium);
+  font-size: var(--ds-font-size-4);
 }
