--- a/src/Designer/frontend/packages/process-editor/src/components/ConfigPanel/ConfigServiceTask/ConfigServiceTask.module.css
+++ b/src/Designer/frontend/packages/process-editor/src/components/ConfigPanel/ConfigServiceTask/ConfigServiceTask.module.css
@@ -12,4 +12,7 @@
   margin: 0;
   padding: var(--fds-spacing-5);
   padding-inline: 0;
+  display: flex;
+  flex-direction: column;
+  gap: var(--fds-spacing-2);
 }
