--- a/src/Designer/frontend/packages/process-editor/src/components/ConfigPanel/ConfigContent/ConfigContent.module.css
+++ b/src/Designer/frontend/packages/process-editor/src/components/ConfigPanel/ConfigContent/ConfigContent.module.css
@@ -1,4 +1,3 @@
-.accordion,
 .configContent {
   display: flex;
   flex-direction: column;
@@ -14,10 +13,15 @@
   height: 100%;
 }
 
-.accordion {
-  padding-inline: 0;
-}
-
 .displayTile {
   padding-inline: var(--fds-spacing-5);
+}
+
+.detailsContent {
+  margin: 0;
+  padding: var(--fds-spacing-5);
+  padding-inline: 0;
+  display: flex;
+  flex-direction: column;
+  gap: var(--fds-spacing-2);
 }
