--- a/src/Designer/frontend/app-development/features/appSettings/components/TabsContent/Tabs/AboutTab/AppConfigForm/ContactPointsTable/ContactPointsTable.module.css
+++ b/src/Designer/frontend/app-development/features/appSettings/components/TabsContent/Tabs/AboutTab/AppConfigForm/ContactPointsTable/ContactPointsTable.module.css
@@ -3,26 +3,15 @@
   justify-content: space-between;
 }
 
-.fieldset {
-  padding: var(--ds-size-3);
-}
-
 .tableWrapper {
   max-height: 300px;
-  overflow-y: auto;
+  overflow: auto;
+  scrollbar-width: auto;
 }
 
-.emailText {
-  color: var(--ds-color-text-subtle);
-}
-
-.formActions {
-  margin-top: var(--ds-size-13);
-  gap: var(--ds-size-4);
-}
-
-.headerNoWrap {
-  white-space: nowrap;
+.tableWrapper::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
 }
 
 .addButtonContainer {
