chore: remove ownership detailes from about app page and render it in profile menu

--- a/src/Designer/frontend/libs/studio-components/src/components/StudioPageHeader/StudioPageHeaderProfileMenu/StudioPageHeaderProfileMenu.module.css
+++ b/src/Designer/frontend/libs/studio-components/src/components/StudioPageHeader/StudioPageHeaderProfileMenu/StudioPageHeaderProfileMenu.module.css
@@ -18,3 +18,7 @@
 .dropDownMenuGroup:not(:first-child) {
   padding-top: var(--ds-size-2);
 }
+
+.profileMenuFooter {
+  padding: var(--ds-size-4);
+}
