fix: revert css link color change
The removal of this rule made error messages colored depending on
'visited'

--- a/src/Designer/frontend/app-development/layout/App.css
+++ b/src/Designer/frontend/app-development/layout/App.css
@@ -18,6 +18,10 @@ a {
   text-decoration: none;
 }
 
+a:visited {
+  color: inherit;
+}
+
 a.fds-link--inverted {
   color: var(--fds-link--inverted);
   text-decoration: underline;
