structure for validate navigation settings

--- a/src/Designer/frontend/packages/ux-editor/src/components/Settings/SettingsNavigation/SettingsNavigation.module.css
+++ b/src/Designer/frontend/packages/ux-editor/src/components/Settings/SettingsNavigation/SettingsNavigation.module.css
@@ -1,12 +1,15 @@
+.navigationSettingsWrapper {
+  display: flex;
+  gap: var(--ds-size-15);
+  max-width: 1300px;
+}
+
 .navigationTabContent {
   max-width: 744px;
   display: flex;
   flex-direction: column;
   gap: var(--fds-spacing-5);
-}
-
-.navigationDescription {
-  padding-top: var(--fds-spacing-1);
+  flex: 1;
 }
 
 .divider {
