add warning message to the 'create release' page

--- a/src/Designer/frontend/app-development/features/appPublish/components/CreateRelease.module.css
+++ b/src/Designer/frontend/app-development/features/appPublish/components/CreateRelease.module.css
@@ -6,5 +6,9 @@
 
 .releaseVersionInput {
   width: 50%;
-  margin-bottom: 8px;
+}
+
+.validationDialogTrigger {
+  display: inline;
+  padding: 0;
 }
