--- a/src/Designer/frontend/app-development/features/appPublish/containers/ReleaseContainer.module.css
+++ b/src/Designer/frontend/app-development/features/appPublish/containers/ReleaseContainer.module.css
@@ -15,7 +15,7 @@
 }
 
 .appReleaseCreateRelease {
-  padding: var(--release-panel-padding);
+  padding-inline: var(--release-panel-padding);
   flex-grow: 1;
 }
 
