Support grouping by owner in frontend

--- a/src/Designer/frontend/dashboard/components/TemplateSelector/TemplateSelector.module.css
+++ b/src/Designer/frontend/dashboard/components/TemplateSelector/TemplateSelector.module.css
@@ -1,5 +1,17 @@
+.templateHeadingContainer {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  margin-bottom: var(--fds-spacing-2);
+}
+
 .templateName {
   font-weight: bold;
+}
+
+.templateOwner {
+  margin-left: var(--fds-spacing-4);
+  margin-top: 0;
 }
 
 .templateSelectorContainer {
